fixed the overflow when adding more than 15 cards

--- a/src/pages/HomePage/home-page.module.scss
+++ b/src/pages/HomePage/home-page.module.scss
@@ -15,4 +15,10 @@
   justify-content: center;
   gap: 2rem;
   grid-template-columns: repeat(5, 1fr);
+  overflow: scroll;
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
